Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test20.java
/* Test20
 * @ Objetivo: Detectar falta el operador de asignacion despues del id.
 */
class clase
{
	static void metodo()
	{
		i  5;
	}
	
}
